# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: 2025 System76, Inc.

[metadata]
name = system76driver
version = attr: system76driver.__version__
description = Hardware-specific enhancements for System76 products
url = https://github.com/pop-os/system76-driver
license = GPL-2.0-or-later
author = System76, Inc.
author_email = dev@system76.com

[options]
python_requires = >=3.8
scripts = system76-driver, system76-driver-cli
packages =  system76driver, system76driver.tests

[options.package_data]
system76driver = data/*
